fixed spacing in html and added padding to main section of index.html

--- a/_06_personal-project/your-solution/cifferello-lucy/assets/stylesheets/main.css
+++ b/_06_personal-project/your-solution/cifferello-lucy/assets/stylesheets/main.css
@@ -59,6 +59,10 @@ header nav {
 
 /* Content */
 
+.main {
+	padding: 50px;
+}
+
 .col-1-3 {
   width: 33%;
 }
